--- a/assets/css/style_p.css
+++ b/assets/css/style_p.css
@@ -28,35 +28,27 @@ h1 {
 }
 
 
-#BackgroundPic {
+#BackgroundPic{
 	width: 100%;
-	height: 500px;
+	height: 800px;
 	border-top: 3px solid #cccccc;
 	position: static;
 }
 
-#ProfilePic {
-	height: 220px;
-	width: 178px;
-	padding: 20px;
-	float: left;
-}
-
-#About {
+#Portfolio {
 	position: absolute;
 	top: 100px;
 	left: 175px;
 	width: 550px;
 	background-color: #ffffff;
 	border: 1px solid #dddddd;
+
 }
 
-#Contact {
-	position: absolute;
-	top: 100px;
-	left: 175px;
-	width: 550px;
-	background-color: #ffffff;
+#Preview {
+	width: 230px;
+	height: 170px;
+	margin: 20px;
 	border: 1px solid #dddddd;
 }
 
@@ -78,25 +70,6 @@ h3 {
 
 }
 
-p {
-	color: #777777;
-	font-family: 'Arial', "Helvetica Neue", Helvetica, sans-serif;
-	padding-top: 20px;
-	margin-right: 20px;
-	text-align: justify;
-}
-
-form {
-	color: #777777;
-	font-family: 'Arial', "Helvetica Neue", Helvetica, sans-serif;
-	text-align: justify;
-	padding-left: 40px;
-}
-
-input {
-	color: #cccccc;
-	font-family: 'Arial', "Helvetica Neue", Helvetica, sans-serif;
-}
 
 #Connect {
 	position: absolute;
@@ -124,9 +97,9 @@ input {
 	width: 100%;
 	background-color: #666666;
 	color: #ffffff;
-	padding: 25px;
+	padding: 20px;
 	text-align: center;
 	border-top: 5px solid #4aaaa5;
 	position: absolute;
-	top:500px;
+	top:830px;
 }
